# ipp

./: .gitignore  LICENSE  README.md  environment.yml  mypy.ini  pyproject.toml  ruff.toml
scripts/: marking_script.py
src/ipp/: __init__.py  ex.py
tests/: test_ex.py  test_new.py
