[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ipp"
dynamic = ["version"]
authors = [
  { name="Thibault Vatter", email="thibault.vatter@gmail.com" },
]
description = "Intro to Programming with Python"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "~=3.11"
dependencies = [
  "pytest",
]

# Development dependencies
[project.optional-dependencies]
dev = [
  "pytest", # Testing framework
  "ruff", # Linter and formatter
]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[project.urls]
Homepage = "https://github.com/tvatter/ipp"
Repository = "https://github.com/tvatter/ipp.git"
Issues = "https://github.com/tvatter/ipp/issues"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]